--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.1.1",
+    "npm": "^10.5.0",
+    "sass": "^1.72.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
